--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
   <script src='js/functions.js' async></script>
+  <script src='js/main.js' async></script>
 </head>
 
 <body>
