MODULE 5 TASK 1-2 FIXED

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Кекстаграм</title>
   <script src="./js/functions.js"></script>
   <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/template_render.js"></script>
 </head>
 
 <body>
